Fix comment's reference jump bug

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -4,3 +4,8 @@
 .comment-action {
   float: right;
 }
+
+.comments {
+  margin-top: -80px;
+  padding-top: 80px;
+}
